--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="navigation__searth--bar">
             <p id="navigation__searth--para">Say"Hello"</p>
             <div class="icon__go--to">
-              <i class="fa-solid fa-arrow-right"></i>
+              <i class="fa-solid fa-paper-plane"></i>
             </div>
           </div>
           <div class="hidden__navigation--open">
@@ -175,7 +175,153 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <div class="about__title">
+          <div class="about__lefttop--subtitle">
+            <p>2025</p>
+          </div>
+          <div class="about__title">
+            <p>
+              Whether it’s your home, office, or a commercial project, we are
+              always dedicated to bringing your vision to life. Our numbers
+              speak better than words:
+            </p>
+          </div>
+        </div>
+        <div class="about__figure">
+          <div class="about__figure--card">
+            <div class="about__card">
+              <div class="about__card--number about__card--area">
+                <p id="about__number--year"></p>
+              </div>
+              <div class="about__card--desc about__card--area">
+                <p>Year of establishment</p>
+                <p>More than 10 years in the field</p>
+              </div>
+              <div class="about__card--user about__card--area">
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+              </div>
+              <div class="card__blank--area about__card--area"></div>
+            </div>
+            <div class="about__card">
+              <div class="card__blank--area about__card--area"></div>
+              <div class="about__card--number about__card--area">
+                <p id="about__number--projects"></p>
+              </div>
+              <div class="about__card--desc about__card--area">
+                <p>Projects are launched</p>
+                <p>A lot of projects are done</p>
+              </div>
+              <div class="about__card--user about__card--area">
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+              </div>
+            </div>
+            <div class="about__card">
+              <div class="about__card--number about__card--area">
+                <p id="about__number--clients"></p>
+              </div>
+              <div class="about__card--desc about__card--area">
+                <p>Clients are satisfied</p>
+                <p>These people love us</p>
+              </div>
+              <div class="about__card--user about__card--area">
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+              </div>
+              <div class="card__blank--area about__card--area"></div>
+            </div>
+            <div class="about__card">
+              <div class="card__blank--area about__card--area"></div>
+              <div class="about__card--number about__card--area">
+                <p id="about__number--projectsinwork"></p>
+              </div>
+              <div class="about__card--desc about__card--area">
+                <p>Projects in work</p>
+                <p>What we do right now</p>
+              </div>
+              <div class="about__card--user about__card--area">
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+                <div class="about__user--icon"></div>
+              </div>
+            </div>
+          </div>
+          <div class="about__touch--buy">
+            <div class="about__touch--searth">
+              <p>Want your own design</p>
+              <div class="about__touch--searthicon">
+                <i class="fa-solid fa-paper-plane"></i>
+              </div>
+            </div>
+            <div class="about__touch--desc">
+              <p>Slots are avaliable</p>
+              <div class="dot"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="project__show">
+        <div class="long__line"></div>
+        <p id="absolute__text--project">WHAT WE PROUD OF</p>
+        <div class="project__show--desc-interactive">
+          <p>Our Projects:</p>
+          <div class="next__back--project-interactive next__back--active">
+            <div class="next__project--btn">
+              <i class="fa-solid fa-arrow-left" id="next__btn--project"></i>
+            </div>
+            <p>Next page</p>
+            <div class="next__project--btn">
+              <i class="fa-solid fa-arrow-right" id="back__btn--project"></i>
+            </div>
+          </div>
+        </div>
+        <div class="project__slide--container">
+          <div class="left__project--slide">
+            <div class="left__slide--project-card">
+              <div class="left__slide--image">
+                <img src="./assets/style/home/home/PROJECT_!.avif" alt="">
+              </div>
+              <p>Pixy Agency Office</p>
+              <p class="d" style="  font-size: var(--font-size-body-X);
+  font-weight: var(--font-weight-semibold);
+  color: var(--font-color-sub);">Berlin, Germany<br>2024</p>
+            </div>
+            <div class="left__slide--project-card">
+              <div class="left__slide--image bigge">
+                <img src="./assets/style/home/home/PROJECT_2.avif" alt="">
+              </div>
+              <p>Old Cousine</p>
+              <p class="d" style="font-size: var(--font-size-body-X);
+  font-weight: var(--font-weight-semibold);
+  color: var(--font-color-sub);">Berlin, Germany<br>2024</p>
+            </div>
+            <div class="left__slide--project-card">
+              <div class="left__slide--image">
+                <img src="./assets/style/home/home/PROJECT_3.avif" alt="">
+              </div>
+              <p>Old Cousine</p>
+              <p class="d" style="font-size: var(--font-size-body-X);
+  font-weight: var(--font-weight-semibold);
+  color: var(--font-color-sub);">Berlin, Germany<br>2024</p>
+            </div>
+          </div>
+        </div>
+        <div class="project__show--low-interactive">
+          <div class="go__to--fullprojects">
+            <p>All the Projects</p>
+            <div class="go__to--btn">
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
