--- a/index.html
+++ b/index.html
@@ -285,30 +285,51 @@
           <div class="left__project--slide">
             <div class="left__slide--project-card">
               <div class="left__slide--image">
-                <img src="./assets/style/home/home/PROJECT_!.avif" alt="">
+                <img src="./assets/style/home/home/PROJECT_!.avif" alt="" />
               </div>
               <p>Pixy Agency Office</p>
-              <p class="d" style="  font-size: var(--font-size-body-X);
-  font-weight: var(--font-weight-semibold);
-  color: var(--font-color-sub);">Berlin, Germany<br>2024</p>
+              <p
+                class="d"
+                style="
+                  font-size: var(--font-size-body-X);
+                  font-weight: var(--font-weight-semibold);
+                  color: var(--font-color-sub);
+                "
+              >
+                Berlin, Germany<br />2024
+              </p>
             </div>
             <div class="left__slide--project-card">
               <div class="left__slide--image bigge">
-                <img src="./assets/style/home/home/PROJECT_2.avif" alt="">
+                <img src="./assets/style/home/home/PROJECT_2.avif" alt="" />
               </div>
               <p>Old Cousine</p>
-              <p class="d" style="font-size: var(--font-size-body-X);
-  font-weight: var(--font-weight-semibold);
-  color: var(--font-color-sub);">Berlin, Germany<br>2024</p>
+              <p
+                class="d"
+                style="
+                  font-size: var(--font-size-body-X);
+                  font-weight: var(--font-weight-semibold);
+                  color: var(--font-color-sub);
+                "
+              >
+                Berlin, Germany<br />2024
+              </p>
             </div>
             <div class="left__slide--project-card">
               <div class="left__slide--image">
-                <img src="./assets/style/home/home/PROJECT_3.avif" alt="">
+                <img src="./assets/style/home/home/PROJECT_3.avif" alt="" />
               </div>
               <p>Old Cousine</p>
-              <p class="d" style="font-size: var(--font-size-body-X);
-  font-weight: var(--font-weight-semibold);
-  color: var(--font-color-sub);">Berlin, Germany<br>2024</p>
+              <p
+                class="d"
+                style="
+                  font-size: var(--font-size-body-X);
+                  font-weight: var(--font-weight-semibold);
+                  color: var(--font-color-sub);
+                "
+              >
+                Berlin, Germany<br />2024
+              </p>
             </div>
           </div>
         </div>
@@ -318,6 +339,174 @@
             <div class="go__to--btn">
               <i class="fa-solid fa-arrow-right"></i>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="process">
+        <div class="process__top--desc">
+          <p>HOW WE DO IT</p>
+          <p>
+            Our work involves many intricate<br />
+            steps and stages.
+          </p>
+        </div>
+        <div class="process__content">
+          <div class="process__content--desc">
+            <p>The Process:*</p>
+          </div>
+          <div class="process__box--content">
+            <div class="process__box--number"><p>01.</p></div>
+            <div class="process__box--image">
+              <img src="./assets/style/home/home/PROGRESS_1.avif" alt="" />
+            </div>
+            <div class="process__box--desc">
+              <p>Tech specifications</p>
+              <p>
+                Technical assignment, measuring the site, and assessing
+                remodeling needs.
+              </p>
+            </div>
+          </div>
+          <div class="process__box--content">
+            <div class="process__box--number"><p>02.</p></div>
+            <div class="process__box--image">
+              <img src="./assets/style/home/home/PROGRESS_2.avif" alt="" />
+            </div>
+            <div class="process__box--desc">
+              <p>Concept, sketches</p>
+              <p>
+                A hand-drawn sketch typically outlines the style and layout of
+                the future interior.
+              </p>
+            </div>
+          </div>
+          <div class="process__box--content">
+            <div class="process__box--number"><p>03.</p></div>
+            <div class="process__box--image">
+              <img src="./assets/style/home/home/PROGRESS_3.avif" alt="" />
+            </div>
+            <div class="process__box--desc">
+              <p>Design project</p>
+              <p>
+                Details on color schemes, furniture, lighting placement, and
+                technical layouts.
+              </p>
+            </div>
+          </div>
+          <div class="process__box--content">
+            <div class="process__box--number"><p>04.</p></div>
+            <div class="process__box--image">
+              <img src="./assets/style/home/home/PROGRESS_4.avif" alt="" />
+            </div>
+            <div class="process__box--desc">
+              <p>3D visualization</p>
+              <p>
+                So that the client can see with his own eyes what he will
+                ultimately receive.
+              </p>
+            </div>
+          </div>
+          <div class="process__box--content">
+            <div class="process__box--number"><p>05.</p></div>
+            <div class="process__box--image">
+              <img src="./assets/style/home/home/PROGRESS_5.avif" alt="" />
+            </div>
+            <div class="process__box--desc">
+              <p>Estimation</p>
+              <p>
+                The pricing details and the total cost of the customer's
+                interior design project.
+              </p>
+            </div>
+          </div>
+          <div class="process__box--content">
+            <div class="process__box--number"><p>06.</p></div>
+            <div class="process__box--image">
+              <img src="./assets/style/home/home/PROGRESS_6.avif" alt="" />
+            </div>
+            <div class="process__box--desc">
+              <p>Materials, etc.</p>
+              <p>
+                Building materials, components and furniture: everything you
+                need for the interior.
+              </p>
+            </div>
+          </div>
+          <div class="process__box--content-desc">
+            <p>* Depends on your wishes</p>
+          </div>
+          <div class="process__box--content">
+            <div class="process__box--number"><p>07.</p></div>
+            <div class="process__box--image">
+              <img src="./assets/style/home/home/PROGRESS_7.avif" alt="" />
+            </div>
+            <div class="process__box--desc">
+              <p>Supervision</p>
+              <p>
+                Supervises the work, making sure that the interior exactly as he
+                intended.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="team">
+        <div class="process__top--desc">
+          <p>WHO WORK FOR YOU</p>
+          <p>
+            Our work involves many intricate<br />
+            steps and stages.
+          </p>
+        </div>
+        <div class="team__slogan">
+          <p>The Team:</p>
+        </div>
+        <div class="team__content--main">
+          <div class="team__content--desc">
+            <p>
+              We are a passionate team of designers dedicated to<br />
+              transforming your vision into beautifully crafted spaces.
+            </p>
+          </div>
+          <div class="team__content--user">
+            <img src="./assets/style/home/home/PEOPLE_1.avif" alt="" />
+            <p>Valeria Novikova</p>
+            <p>Designer</p>
+          </div>
+          <div class="team__content--user">
+            <img src="./assets/style/home/home/PEOPLE_2.avif" alt="" />
+            <p>Alex Podzemsky</p>
+            <p>Designer</p>
+          </div>
+          <div class="team__content--user">
+            <img src="./assets/style/home/home/PEOPLE_3.avif" alt="" />
+            <p>Helen Reeves</p>
+            <p>Designer</p>
+          </div>
+        </div>
+        <div class="team__content--submain">
+          <div class="bigger__team--content-user">
+            <div class="left__content--team--user">
+              <i class="fa-solid fa-arrow-right"></i>
+              <p>Mark Jackson</p>
+              <p>Owner</p>
+            </div>
+            <div class="right__content--team--user">
+              <p>
+                We are here to create<br />
+                space that will inspire<br />
+                you.
+              </p>
+            </div>
+          </div>
+          <div class="team__content--user">
+            <img src="./assets/style/home/home/PEOPLE_5.avif" alt="" />
+            <p>Tanya Rodrigue</p>
+            <p>HR</p>
+          </div>
+          <div class="team__content--user">
+            <p>50+</p>
+            <p>People in business</p>
           </div>
         </div>
       </section>
