--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jura:wght@300..700&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
   </head>
   <body>
     <section class="hidden__nagativation--bar">
@@ -510,8 +524,429 @@
           </div>
         </div>
       </section>
+      <section class="faq">
+        <div class="long__line"></div>
+        <div class="faq__top--desc">
+          <p>YOU MIGHT ASK US</p>
+        </div>
+        <div class="faq__content--container">
+          <div class="left__content--container">
+            <p>FAQ:</p>
+          </div>
+          <div class="right__content--container">
+            <div class="faq__content--main">
+              <div class="faq__content--question">
+                <p>What interior design services do you offer?</p>
+              </div>
+              <div class="faq__content--answer">
+                <p>
+                  Our interior design services cover everything you need to
+                  create a stunning and functional space. From initial concept
+                  development and space planning to selecting color schemes,
+                  furniture, and custom designs, we bring your vision to life.
+                  We also specialize in lighting plans, décor styling, and
+                  project management to ensure every detail is seamless. Whether
+                  you’re redesigning a single room or embarking on a full-scale
+                  renovation, we’re here to transform your space into a
+                  personalized, stylish, and inspiring environment that
+                  perfectly suits your needs and lifestyle.
+                </p>
+              </div>
+              <div class="long__line"></div>
+            </div>
+            <div class="faq__content--main">
+              <div class="faq__content--question">
+                <p>How does the design process work from start to finish?</p>
+              </div>
+              <div class="faq__content--answer">
+                <p>
+                  The design process begins with an initial consultation to
+                  understand your vision, needs, and preferences. Next, we
+                  conduct research and assess the space, taking measurements and
+                  evaluating functionality. Based on this, we develop a concept
+                  with mood boards, sketches, and initial ideas for color
+                  schemes, furniture, and layouts. Once the concept is approved,
+                  we move to the detailed design phase, creating 3D renderings
+                  or detailed plans and selecting materials, finishes, and
+                  furnishings. After finalizing the design, we oversee the
+                  implementation, working closely with contractors and suppliers
+                  to ensure everything aligns with the vision. The process
+                  concludes with the final styling and handover, where we
+                  transform the space into a finished, polished environment that
+                  reflects your personality and meets your goals. Every step is
+                  collaborative, ensuring your input is valued throughout.
+                </p>
+              </div>
+              <div class="long__line"></div>
+            </div>
+            <div class="faq__content--main">
+              <div class="faq__content--question">
+                <p>How long does an interior design project typically take?</p>
+              </div>
+              <div class="faq__content--answer">
+                <p>
+                  The timeline for an interior design project can vary depending
+                  on the scope and complexity of the project. Smaller projects,
+                  such as designing a single room, might take 4-8 weeks, while
+                  larger projects, like full home renovations, can take several
+                  months. The process includes phases like initial
+                  consultations, concept development, design revisions, sourcing
+                  materials, and implementation. Timelines may also depend on
+                  factors like availability of materials, contractor schedules,
+                  and any unforeseen challenges. During the project, we’ll keep
+                  you updated on progress and ensure a smooth process from start
+                  to finish.
+                </p>
+              </div>
+              <div class="long__line"></div>
+            </div>
+            <div class="faq__content--main">
+              <div class="faq__content--question">
+                <p>Can you help design small spaces or single rooms?</p>
+              </div>
+              <div class="faq__content--answer">
+                <p>
+                  Absolutely! We specialize in designing spaces of all sizes,
+                  including small areas and single rooms. Whether it's
+                  maximizing functionality in a compact space or creating a
+                  cohesive, stylish look for one room, we tailor our designs to
+                  meet your needs and preferences. Even the smallest spaces can
+                  be transformed into something stunning and practical!
+                </p>
+              </div>
+              <div class="long__line"></div>
+            </div>
+            <div class="faq__content--main">
+              <div class="faq__content--question">
+                <p>How do you determine the project budget?</p>
+              </div>
+              <div class="faq__content--answer">
+                <p>
+                  We determine the project budget by collaborating closely with
+                  you to understand your goals, preferences, and financial
+                  parameters. We assess the scope of the project, the size of
+                  the space, and the materials or furnishings required.
+                  Transparency is key—we provide a detailed breakdown of costs
+                  and help prioritize elements to ensure your vision aligns with
+                  your budget.
+                </p>
+              </div>
+              <div class="long__line"></div>
+            </div>
+            <div class="add__faq--section">
+              <p>If you want to know anything else:</p>
+              <div class="add__question">
+                <p>Ask your Question</p>
+                <i class="fa-solid fa-paper-plane"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="carousel">
+        <div class="carousel__group">
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>20%</p>
+            <p>off to our Friends</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>25%</p>
+            <p>off to Firse Project</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>12%</p>
+            <p>off selected Style</p>
+          </div>
+        </div>
+        <div class="carousel__group" aria-hidden="">
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>20%</p>
+            <p>off to our Friends</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>25%</p>
+            <p>off to Firse Project</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>12%</p>
+            <p>off selected Style</p>
+          </div>
+        </div>
+        <div class="carousel__group" aria-hidden="">
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>20%</p>
+            <p>off to our Friends</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>25%</p>
+            <p>off to Firse Project</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>12%</p>
+            <p>off selected Style</p>
+          </div>
+        </div>
+        <div class="carousel__group" aria-hidden="">
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>20%</p>
+            <p>off to our Friends</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>25%</p>
+            <p>off to Firse Project</p>
+          </div>
+          <div class="carousel__items">
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <p>12%</p>
+            <p>off selected Style</p>
+          </div>
+        </div>
+      </section>
+      <section class="middle__hero">
+        <div class="middle__hero--content">
+          <p>Crafting Environments</p>
+          <p>That Inspire</p>
+        </div>
+        <div class="middle__hero--main-desc">
+          <p>It's so Easy to</p>
+          <p>Change the Mood</p>
+        </div>
+        <div class="middle__hero--btn">
+          <div class="order__btn">
+            <p>Order the Design</p>
+            <div class="order__icon">
+              <i class="fa-solid fa-pizza-slice"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="review">
+        <div class="review__top--desc">
+          <p>OWR CLIENTS SAY</p>
+          <p>The warm words of our clients let us achieve more</p>
+        </div>
+        <div class="review__main--content">
+          <div class="right__reivew--content">
+            <div class="review__icon"></div>
+            <div class="review__desc">
+              <p id="client__name">Morgan Dufresne</p>
+              <p id="client__job">Company owner</p>
+            </div>
+          </div>
+          <div class="left__review--content">
+            <p id="client__desc--main">
+              From concept to reality, the team turned my vision into a
+              stunning, livable space. I couldn’t be happier with this!
+            </p>
+            <p id="client__desc--sub">
+              Morgan wanted a modern, functional office. We delivered a
+              bright,<br />
+              stylish space with smart design solutions, perfectly tailored
+              to<br />
+              his company style.
+            </p>
+          </div>
+        </div>
+        <div class="review__turn--leftright">
+          <div class="review__turn--left">
+            <i class="ph ph-arrow-circle-left"></i>
+          </div>
+          <div class="review__turn--right">
+            <i class="ph ph-arrow-circle-right"></i>
+          </div>
+        </div>
+      </section>
+      <section class="advantage">
+        <div class="advantage__top--desc">
+          <p>WHY PEOPLE CHOOSE US</p>
+          <p>Advantages:</p>
+        </div>
+        <div class="advantage__content--main">
+          <!-- 6c/4r -->
+          <div class="advantage__content--box">
+            <p>Expertise</p>
+            <p>Experience</p>
+          </div>
+          <div class="advantage__content--box">
+            <p>Unique Design</p>
+            <p>Aestetic</p>
+          </div>
+          <div class="advantage__content--box"></div>
+          <div class="advantage__content--box">
+            <p>Inovative</p>
+            <p>Solutions</p>
+          </div>
+          <div class="advantage__content--box">
+            <div class="top__advantage--desc">
+              <p>304</p>
+              <div class="righttop__advantage--desc">
+                <i class="ph ph-cube"></i>
+                <p>Projects are launched</p>
+              </div>
+            </div>
+            <div class="bottom__advantage--desc">
+              <p>Strong Portfolio</p>
+              <p>& Reputation</p>
+            </div>
+          </div>
+          <div class="advantage__content--box">
+            <p>Client-oriented</p>
+            <p>Approach</p>
+            <div class="back__image--content">
+              <img src="./assets/style/home/home/ADVANTAGE_4.avif" alt="" />
+            </div>
+            <div class="back__image--content-reverse">
+              <img src="./assets/style/home/home/ADVANTAGE_4.avif" alt="" />
+            </div>
+          </div>
+          <div class="advantage__content--box">
+            <p>Serious Attention</p>
+            <p>to Detail</p>
+          </div>
+        </div>
+      </section>
+      <section class="create">
+        <div class="create__top--desc">
+          <p>HOW WE CREATE</p>
+        </div>
+        <div class="create__main--content">
+          <div class="create__main--box">
+            <p>We are:</p>
+          </div>
+          <div class="create__main--box">
+            <img src="./assets/style/home/home/CREATE_1.avif" alt="" />
+          </div>
+          <div class="create__main--box">
+            <p>
+              The team works like storytellers, turning spaces into narratives
+              you’ll love living in.
+            </p>
+          </div>
+          <div class="create__main--box">
+            <img src="./assets/style/home/home/CREATE_2.avif" alt="" />
+          </div>
+          <div class="create__main--box">
+            <img src="./assets/style/home/home/CREATE_3.avif" alt="" />
+          </div>
+          <div class="create__main--box">
+            <img src="./assets/style/home/home/CREATE_4.avif" alt="" />
+          </div>
+          <div class="create__main--box">
+            <img src="./assets/style/home/home/CREATE_5.avif" alt="" />
+          </div>
+          <div class="create__main--box">
+            <img src="./assets/style/home/home/CREATE_6.avif" alt="" />
+          </div>
+          <div class="create__main--box">
+            <p>
+              Our process is alive — adapting, refining, and growing with your
+              vision. Always.
+            </p>
+          </div>
+          <div class="create__main--box">
+            <img src="./assets/style/home/home/CREATE_7.avif" alt="" />
+          </div>
+          <div class="create__main--box">
+            <p>
+              Like artists with a blank canvas, we transform rooms into living
+              works of art.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="top__footer--desc">
+        <p>HouseMood</p>
+      </div>
+      <div class="medium__footer--desc">
+        <div class="left__medium--footer">
+          <p>We transform your vision into beautifully crafted spaces.</p>
+        </div>
+        <div class="center__medium--footer">
+          <div class="hidden__navigation--content">
+            <div class="hidden__upper--content">
+              <div class="navigation__animation">
+                <div class="navigation__word--animation">
+                  <p><a href="">Home</a></p>
+                </div>
+                <div class="navigation__word--animation">
+                  <p><a href="">Home</a></p>
+                </div>
+              </div>
+              <div class="navigation__animation">
+                <div class="navigation__word--animation">
+                  <p><a href="">Projects</a></p>
+                </div>
+                <div class="navigation__word--animation">
+                  <p><a href="">Projects</a></p>
+                </div>
+              </div>
+              <div class="navigation__animation">
+                <div class="navigation__word--animation">
+                  <p><a href="">About Us</a></p>
+                </div>
+                <div class="navigation__word--animation">
+                  <p><a href="">About Us</a></p>
+                </div>
+              </div>
+              <div class="navigation__animation">
+                <div class="navigation__word--animation">
+                  <p><a href="">Contact</a></p>
+                </div>
+                <div class="navigation__word--animation">
+                  <p><a href="">Contact</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right__medium--footer">
+          <div class="p"><a href="">Instagram</a></div>
+          <div class="p"><a href=""> Behance</a></div>
+          <div class="p"><a href=""> Twitter</a></div>
+        </div>
+      </div>
+      <div class="backdrop__footer--desc">
+        <p>(099) 791-00-75</p>
+        <p><a href="">hi@housemood.com</a></p>
+      </div>
+      <div class="bottom__footer--desc">
+        <p>© All rights Reserved</p>
+        <div class="animated__bottom--footer-desc">
+          <p>Privacy policy</p>
+          <p>Terms of Service</p>
+        </div>
+        <p>
+          France, Paris <br />
+          Str. Believein Yourself 29 <br />
+          App. 390
+        </p>
+      </div>
+    </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
