--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="about__lefttop--subtitle">
             <p>2025</p>
           </div>
-          <div class="about__title">
+          <div class="about__titlel">
             <p>
               Whether it’s your home, office, or a commercial project, we are
               always dedicated to bringing your vision to life. Our numbers
@@ -368,7 +368,7 @@
           <div class="process__content--desc">
             <p>The Process:*</p>
           </div>
-          <div class="process__box--content">
+          <div class="process__box--content lol">
             <div class="process__box--number"><p>01.</p></div>
             <div class="process__box--image">
               <img src="./assets/style/home/home/PROGRESS_1.avif" alt="" />
@@ -384,7 +384,7 @@
           <div class="process__box--content">
             <div class="process__box--number"><p>02.</p></div>
             <div class="process__box--image">
-              <img src="./assets/style/home/home/PROGRESS_2.avif" alt="" />
+              <img src="./assets/style/home/home/PROGwRESS_2.avif" alt="" />
             </div>
             <div class="process__box--desc">
               <p>Concept, sketches</p>
@@ -884,42 +884,46 @@
       </div>
       <div class="medium__footer--desc">
         <div class="left__medium--footer">
-          <p>We transform your vision into beautifully crafted spaces.</p>
+          <p>
+            We transform your <br />vision into
+            <span style="color: #f1dfc2">
+              beautifully <br />
+              crafted spaces.</span
+            >
+          </p>
         </div>
         <div class="center__medium--footer">
-          <div class="hidden__navigation--content">
-            <div class="hidden__upper--content">
-              <div class="navigation__animation">
-                <div class="navigation__word--animation">
-                  <p><a href="">Home</a></p>
-                </div>
-                <div class="navigation__word--animation">
-                  <p><a href="">Home</a></p>
-                </div>
+          <div class="hidden__upper--content">
+            <div class="navigation__animation">
+              <div class="navigation__word--animation">
+                <p><a href="">Home</a></p>
               </div>
-              <div class="navigation__animation">
-                <div class="navigation__word--animation">
-                  <p><a href="">Projects</a></p>
-                </div>
-                <div class="navigation__word--animation">
-                  <p><a href="">Projects</a></p>
-                </div>
+              <div class="navigation__word--animation">
+                <p><a href="">Home</a></p>
               </div>
-              <div class="navigation__animation">
-                <div class="navigation__word--animation">
-                  <p><a href="">About Us</a></p>
-                </div>
-                <div class="navigation__word--animation">
-                  <p><a href="">About Us</a></p>
-                </div>
+            </div>
+            <div class="navigation__animation">
+              <div class="navigation__word--animation">
+                <p><a href="">Projects</a></p>
               </div>
-              <div class="navigation__animation">
-                <div class="navigation__word--animation">
-                  <p><a href="">Contact</a></p>
-                </div>
-                <div class="navigation__word--animation">
-                  <p><a href="">Contact</a></p>
-                </div>
+              <div class="navigation__word--animation">
+                <p><a href="">Projects</a></p>
+              </div>
+            </div>
+            <div class="navigation__animation">
+              <div class="navigation__word--animation">
+                <p><a href="">About Us</a></p>
+              </div>
+              <div class="navigation__word--animation">
+                <p><a href="">About Us</a></p>
+              </div>
+            </div>
+            <div class="navigation__animation">
+              <div class="navigation__word--animation">
+                <p><a href="">Contact</a></p>
+              </div>
+              <div class="navigation__word--animation">
+                <p><a href="">Contact</a></p>
               </div>
             </div>
           </div>
@@ -936,10 +940,8 @@
       </div>
       <div class="bottom__footer--desc">
         <p>© All rights Reserved</p>
-        <div class="animated__bottom--footer-desc">
-          <p>Privacy policy</p>
-          <p>Terms of Service</p>
-        </div>
+        <p>Privacy policy</p>
+        <p>Terms of Service</p>
         <p>
           France, Paris <br />
           Str. Believein Yourself 29 <br />
